<resources>
    <string name="app_name">Boardin_2020081014</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="genres">
        <item>연인</item>
        <item>추리</item>
        <item>퍼즐</item>
        <item>전략</item>
        <item>협력</item>
        <item>카드</item>
        <item>마피아</item>
        <item>경제</item>
        <item>속고속이기</item>
        <item>손재주</item>
        <item>순발력</item>
        <item>TRPG</item>
    </string-array>

    <string name="diff1">easy</string>
    <string name="diff2">normal</string>
    <string name="diff3">hard</string>

    <string-array name="diff">
        <item>easy</item>
        <item>normal</item>
        <item>hard</item>
    </string-array>

    <array name="slider_diff">
        <item>0.0</item>
        <item>2.0</item>
    </array>

    <string-array name="players">
        <item>상관없음</item>
        <item>1명</item>
        <item>2명</item>
        <item>3명</item>
        <item>4명</item>
        <item>5명</item>
        <item>6명</item>
        <item>6명 이상</item>
    </string-array>

    <array name="slider_values">
        <item>0.0</item>
        <item>5.0</item>
    </array>

    <string name="time1">10분</string>
    <string name="time2">20분</string>
    <string name="time3">30분</string>
    <string name="time4">1시간</string>
    <string name="time5">2시간</string>
    <string name="time6">2시간 +</string>

    <string-array name="times">
        <item>10분</item>
        <item>20분</item>
        <item>30분</item>
        <item>1시간</item>
        <item>2시간</item>
        <item>2시간 +</item>
    </string-array>

    <string name="goyoutube">유튜브 영상 보러가기</string>
</resources>